# crud_rust_mongodb

./: .gitignore  LICENSE  README.md
example1/: Cargo.toml  README.md
example1/src/: delete.rs  insert.rs  main.rs  search.rs  structs.rs  update.rs
example2/: Cargo.toml
example2/src/: create.rs  delete.rs  main.rs  read.rs  structs.rs  update.rs
example3/: .env  Cargo.toml  README.md
example3/src/: database.rs  main.rs  options.rs
example3/src/users/: controller.rs  model.rs
