[package]
name = "example3"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
mongodb = "3.1.0"
serde = "1.0.209"
tokio = { version = "1.40.0", features = ["full"] }

# ==== PROFILES SETTINGS ====

[profile.dev.package."*"]
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = true
